--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -37,18 +37,18 @@ video_1ADE4884_0F75_49F0_4199_69895B5D5F31.label = Logo 3D Achado Digital
 video_0FD67509_139C_FED1_41AE_F67E2E99519C.label = Video Comercial ACHADO DIGITAL 360º
 
 ### Video
-videores_5EC5960E_12BB_3AD3_41A1_6DEABAC5A2A1.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
-videores_5EC5860F_12BB_3AD1_4196_88974EEFF651.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
-videores_5EC5960E_12BB_3AD3_41A1_6DEABAC5A2A1.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.m3u8
-videores_5EC5860F_12BB_3AD1_4196_88974EEFF651.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.mp4
-videolevel_5EFA5768_12BB_395F_41AE_DD943BC3F06B.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
-videolevel_5EFA4769_12BB_3951_418E_691C61B9AFB4.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
-videolevel_5EFA5768_12BB_395F_41AE_DD943BC3F06B.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.m3u8
-videolevel_5EFA4769_12BB_3951_418E_691C61B9AFB4.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.mp4
-videolevel_5EC746D1_12BB_3B71_41A8_8D010FC80AF7.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
-videolevel_5EC776D2_12BB_3B73_4198_92C66331BE87.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
-videolevel_5EC746D1_12BB_3B71_41A8_8D010FC80AF7.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.m3u8
-videolevel_5EC776D2_12BB_3B73_4198_92C66331BE87.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.mp4
+videores_413E46E6_11B7_3B53_41AF_BDF3EC55D3A4.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
+videores_413E76E7_11B7_3B51_41AE_AD5CB5C8ACF7.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
+videores_413E46E6_11B7_3B53_41AF_BDF3EC55D3A4.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.m3u8
+videores_413E76E7_11B7_3B51_41AE_AD5CB5C8ACF7.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.mp4
+videolevel_4136585F_11B7_3771_41A8_EDA9B0D8B3B3.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
+videolevel_41364860_11B7_374F_41AD_DF28A823BA2A.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
+videolevel_4136585F_11B7_3771_41A8_EDA9B0D8B3B3.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.m3u8
+videolevel_41364860_11B7_374F_41AD_DF28A823BA2A.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.mp4
+videolevel_413A17B5_11B7_3931_4186_AF9E363D1FCF.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
+videolevel_413A07B6_11B7_3933_419E_EAD92C057CB9.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
+videolevel_413A17B5_11B7_3931_4186_AF9E363D1FCF.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.m3u8
+videolevel_413A07B6_11B7_3933_419E_EAD92C057CB9.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.mp4
 
 ### Video Subtitles
 
@@ -83,8 +83,8 @@ Button_159EDDDC_31FA_0014_419A_61C18E43FE01.label = HOTEL SHANGRI-LÁ BROTAS
 Button_159EDDDC_31FA_0014_419A_61C18E43FE01_mobile.label = HOTEL SHANGRI-LÁ BROTAS
 Button_0399826A_2D79_4594_41BA_934A50D0E6B4_mobile.label = IMAGENS >
 Button_0399826A_2D79_4594_41BA_934A50D0E6B4.label = IMAGENS >
+Button_2A2D853B_310E_001C_41C4_1C2E2BAFC35D_mobile.label = INFO
 Button_2A2D853B_310E_001C_41C4_1C2E2BAFC35D.label = INFO TOUR
-Button_2A2D853B_310E_001C_41C4_1C2E2BAFC35D_mobile.label = INFO TOUR
 Button_0AEB5577_2D08_CE7B_41B6_192923248F4E_mobile.label = INFORMAÇÕES >
 Button_0AEB5577_2D08_CE7B_41B6_192923248F4E.label = INFORMAÇÕES >
 Button_17EAB2B7_3106_0014_41A7_209417AD3E9A.label = Imagens 1
@@ -217,7 +217,7 @@ Button_175A5214_31FA_0014_4198_930DF49BADD9.label = VOLTAR
 Button_168CA310_3106_01EC_41C7_72CE0522951A.label = VOLTAR
 Button_168D5310_3106_01EC_41B5_96D9387401B8_mobile.label = WhatsApp Conversar >
 Button_168D5310_3106_01EC_41B5_96D9387401B8.label = WhatsApp Conversar >
-Button_15A10DDC_31FA_0014_4185_021C898E177D_mobile.label = iGUi PISCINAS PIRACICABA
+Button_15A10DDC_31FA_0014_4185_021C898E177D_mobile.label = iGUi PISCINAS 
 Button_15A10DDC_31FA_0014_4185_021C898E177D.label = iGUi PISCINAS PIRACICABA
 
 ### Image
