--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -37,18 +37,18 @@ video_1ADE4884_0F75_49F0_4199_69895B5D5F31.label = Logo 3D Achado Digital
 video_0FD67509_139C_FED1_41AE_F67E2E99519C.label = Video Comercial ACHADO DIGITAL 360º
 
 ### Video
-videores_3C74E0C5_20FC_44F4_41B9_1B0C29DED424.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
-videores_3C7770C9_20FC_44FC_41A2_9C960630EA7A.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
-videores_3C74E0C5_20FC_44F4_41B9_1B0C29DED424.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.m3u8
-videores_3C7770C9_20FC_44FC_41A2_9C960630EA7A.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.mp4
-videolevel_3C4663EA_20FC_44BC_41B0_D3A5D9425961.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
-videolevel_3C4653EA_20FC_44BC_41B8_FE0A9E97B8A1.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
-videolevel_3C4663EA_20FC_44BC_41B0_D3A5D9425961.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.m3u8
-videolevel_3C4653EA_20FC_44BC_41B8_FE0A9E97B8A1.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.mp4
-videolevel_3C41F35A_20FC_459C_419E_73D38339141E.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
-videolevel_3C41C35C_20FC_4594_415A_A4281594A5D8.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
-videolevel_3C41F35A_20FC_459C_419E_73D38339141E.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.m3u8
-videolevel_3C41C35C_20FC_4594_415A_A4281594A5D8.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.mp4
+videores_3E7AAE81_2144_5F6C_41B6_ADA17ECFCE1C.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
+videores_3E7ABE82_2144_5F6C_41BD_ECDCDC0E9132.posterURL = media/media_146032E0_0F8D_D930_4178_D1E442619C00_poster_pt.jpg
+videores_3E7AAE81_2144_5F6C_41B6_ADA17ECFCE1C.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.m3u8
+videores_3E7ABE82_2144_5F6C_41BD_ECDCDC0E9132.url = media/media_146032E0_0F8D_D930_4178_D1E442619C00_pt.mp4
+videolevel_3E606FC1_2144_5CEC_41B6_F858F3FD828B.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
+videolevel_3E608FC1_2144_5CEC_41BE_1AA979251A44.posterURL = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_poster_pt.jpg
+videolevel_3E606FC1_2144_5CEC_41B6_F858F3FD828B.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.m3u8
+videolevel_3E608FC1_2144_5CEC_41BE_1AA979251A44.url = media/video_0FD67509_139C_FED1_41AE_F67E2E99519C_pt.mp4
+videolevel_3E657F4C_2144_5DF4_41B0_0930E5639E5F.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
+videolevel_3E658F4C_2144_5DF4_418D_3CDEA2B13DAD.posterURL = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_poster_pt.jpg
+videolevel_3E657F4C_2144_5DF4_41B0_0930E5639E5F.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.m3u8
+videolevel_3E658F4C_2144_5DF4_418D_3CDEA2B13DAD.url = media/video_1ADE4884_0F75_49F0_4199_69895B5D5F31_pt.mp4
 
 ### Video Subtitles
 
@@ -87,28 +87,28 @@ Button_2A2D853B_310E_001C_41C4_1C2E2BAFC35D.label = INFO
 Button_2A2D853B_310E_001C_41C4_1C2E2BAFC35D_mobile.label = INFO 
 Button_0AEB5577_2D08_CE7B_41B6_192923248F4E_mobile.label = INFORMAÇÕES >
 Button_0AEB5577_2D08_CE7B_41B6_192923248F4E.label = INFORMAÇÕES >
-Button_17EAB2B7_3106_0014_41A7_209417AD3E9A.label = Imagens 1
 Button_17EAB2B7_3106_0014_41A7_209417AD3E9A_mobile.label = Imagens 1
-Button_0B73474A_2D18_CB95_41B5_180037BA80BC_mobile.pressedLabel = Inserdt Text
+Button_17EAB2B7_3106_0014_41A7_209417AD3E9A.label = Imagens 1
 Button_0B73474A_2D18_CB95_41B5_180037BA80BC.pressedLabel = Inserdt Text
-Button_062AF830_1140_E215_418D_D2FC11B12C47_mobile.label = LOREM IPSUM
+Button_0B73474A_2D18_CB95_41B5_180037BA80BC_mobile.pressedLabel = Inserdt Text
 Button_062AF830_1140_E215_418D_D2FC11B12C47.label = LOREM IPSUM
 Button_17567D7D_31FA_0015_41C2_1E0D0AF05C7A.label = Lorem Ipsum
+Button_17564D7D_31FA_0015_41B8_A9191CD56C52.label = Lorem Ipsum
+Button_17566D7D_31FA_0015_41AD_98D7C60C694F.label = Lorem Ipsum
 Button_17560D7D_31FA_0015_41C4_7F0EC7540CC2.label = Lorem Ipsum
-Button_17562D7D_31FA_0015_41A3_96B282B30DBA.label = Lorem Ipsum
 Button_1756DD7D_31FA_0015_41A5_988B67FCF8B7.label = Lorem Ipsum
 Button_1756FD7D_31FA_0015_41C7_DA2AAC2AAAEC.label = Lorem Ipsum
+Button_17565D7D_31FA_0015_4193_78BBCB2DC70F.label = Lorem Ipsum
+Button_17562D7D_31FA_0015_41A3_96B282B30DBA.label = Lorem Ipsum
 Button_17564D7D_31FA_0015_41B8_A9191CD56C52.pressedLabel = Lorem Ipsum
-Button_17564D7D_31FA_0015_41B8_A9191CD56C52.label = Lorem Ipsum
 Button_17598215_31FA_0014_41AC_1166AB319171.label = Lorem Ipsum
-Button_17566D7D_31FA_0015_41AD_98D7C60C694F.label = Lorem Ipsum
 Button_1759F215_31FA_0014_41BD_BBFA5FB0D882.pressedLabel = Lorem Ipsum
 Button_1759D215_31FA_0014_41AD_B6C5744A0B97.label = Lorem Ipsum
 Button_17593215_31FA_0014_41C0_42BAFB0080F0.label = Lorem Ipsum
 Button_159EBDDD_31FA_0014_41C8_935504B30727.label = Lorem Ipsum
 Button_17590215_31FA_0014_41C1_2B2D012DCC76.label = Lorem Ipsum
 Button_17597215_31FA_0014_41C0_9BEE1DE4D7F6.label = Lorem Ipsum
-Button_17565D7D_31FA_0015_4193_78BBCB2DC70F.label = Lorem Ipsum
+Button_17596215_31FA_0014_41C6_A42670770708.label = Lorem Ipsum
 Button_1758B215_31FA_0014_41BC_C4EAC2A9544B.label = Lorem Ipsum
 Button_168D9311_3106_01EC_41A8_3BD8769525D6_mobile.label = Lorem Ipsum
 Button_1759F215_31FA_0014_41BD_BBFA5FB0D882.label = Lorem Ipsum
@@ -117,7 +117,7 @@ Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0.label = Lorem Ipsum
 Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0.pressedLabel = Lorem Ipsum
 Button_17EB02B7_3106_0014_41AF_05D9AC36B189.label = Lorem Ipsum
 Button_17EB32B7_3106_0014_41C8_467BF6AECBE8.label = Lorem Ipsum
-Button_17596215_31FA_0014_41C6_A42670770708.label = Lorem Ipsum
+Button_168DD310_3106_01EC_4190_7815FA70349E_mobile.label = Lorem Ipsum
 Button_17EB52B7_3106_0014_419C_439E593AEC43.label = Lorem Ipsum
 Button_17EB62B7_3106_0014_41C5_43B38271B353.label = Lorem Ipsum
 Button_17EB72B7_3106_0014_41B9_61857077BF4A.label = Lorem Ipsum
@@ -131,66 +131,65 @@ Button_020BBBDA_119F_6973_41AA_D38776804912.label = Lorem Ipsum
 Button_020BBBDA_119F_6973_41AA_D38776804912.pressedLabel = Lorem Ipsum
 Button_168D2310_3106_01EC_41B8_9D7D1B2B55FA.label = Lorem Ipsum
 Button_168D0310_3106_01EC_41A1_FA8FC42E6FF3.label = Lorem Ipsum
-Button_168DD310_3106_01EC_4190_7815FA70349E_mobile.label = Lorem Ipsum
+Button_159E8DDD_31FA_0014_41C5_F18F441AF371_mobile.label = Lorem Ipsum
 Button_168DD310_3106_01EC_4190_7815FA70349E.label = Lorem Ipsum
 Button_168DB310_3106_01EC_41B2_3511AA5E40E1.label = Lorem Ipsum
 Button_168DA310_3106_01EC_41BE_DF88732C2A28.label = Lorem Ipsum
 Button_168D9311_3106_01EC_41A8_3BD8769525D6.label = Lorem Ipsum
-Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0_mobile.label = Lorem Ipsum
-Button_17EB92B7_3106_0014_41B2_34A3E3F63779_mobile.label = Lorem Ipsum
-Button_159E9DDC_31FA_0015_41B6_CB1D433C7673_mobile.label = Lorem Ipsum
-Button_17EB62B7_3106_0014_41C5_43B38271B353_mobile.label = Lorem Ipsum
-Button_159E8DDD_31FA_0014_41C5_F18F441AF371_mobile.label = Lorem Ipsum
-Button_15A12DDC_31FA_0014_416B_ED845741AE5F_mobile.pressedLabel = Lorem Ipsum
-Button_1758B215_31FA_0014_41BC_C4EAC2A9544B_mobile.label = Lorem Ipsum
-Button_15A12DDC_31FA_0014_416B_ED845741AE5F.pressedLabel = Lorem Ipsum
-Button_17EB72B7_3106_0014_41B9_61857077BF4A_mobile.label = Lorem Ipsum
-Button_1759D215_31FA_0014_41AD_B6C5744A0B97_mobile.label = Lorem Ipsum
-Button_168D0310_3106_01EC_41A1_FA8FC42E6FF3_mobile.label = Lorem Ipsum
-Button_17EB52B7_3106_0014_419C_439E593AEC43_mobile.label = Lorem Ipsum
 Button_168D3310_3106_01EC_41AC_5D524E4677A5_mobile.pressedLabel = Lorem Ipsum
+Button_17EAD2B7_3106_0014_41C0_0B5453B4841D_mobile.label = Lorem Ipsum
+Button_1759F215_31FA_0014_41BD_BBFA5FB0D882_mobile.pressedLabel = Lorem Ipsum
+Button_17EB62B7_3106_0014_41C5_43B38271B353_mobile.label = Lorem Ipsum
+Button_17EB52B7_3106_0014_419C_439E593AEC43_mobile.label = Lorem Ipsum
 Button_17596215_31FA_0014_41C6_A42670770708_mobile.label = Lorem Ipsum
 Button_17597215_31FA_0014_41C0_9BEE1DE4D7F6_mobile.label = Lorem Ipsum
-Button_13D4FC1E_310A_0017_41BA_DDA6D071C1BA.label = Lorem Ipsum
-Button_168D2310_3106_01EC_41B8_9D7D1B2B55FA_mobile.label = Lorem Ipsum
+Button_15A12DDC_31FA_0014_416B_ED845741AE5F.pressedLabel = Lorem Ipsum
+Button_17EB72B7_3106_0014_41B9_61857077BF4A_mobile.label = Lorem Ipsum
+Button_1759F215_31FA_0014_41BD_BBFA5FB0D882_mobile.label = Lorem Ipsum
+Button_168D0310_3106_01EC_41A1_FA8FC42E6FF3_mobile.label = Lorem Ipsum
+Button_1758B215_31FA_0014_41BC_C4EAC2A9544B_mobile.label = Lorem Ipsum
 Button_17EB32B7_3106_0014_41C8_467BF6AECBE8_mobile.label = Lorem Ipsum
 Button_17590215_31FA_0014_41C1_2B2D012DCC76_mobile.label = Lorem Ipsum
+Button_17593215_31FA_0014_41C0_42BAFB0080F0_mobile.label = Lorem Ipsum
+Button_13D4FC1E_310A_0017_41BA_DDA6D071C1BA.label = Lorem Ipsum
+Button_168D2310_3106_01EC_41B8_9D7D1B2B55FA_mobile.label = Lorem Ipsum
+Button_17EB02B7_3106_0014_41AF_05D9AC36B189_mobile.label = Lorem Ipsum
+Button_1759D215_31FA_0014_41AD_B6C5744A0B97_mobile.label = Lorem Ipsum
 Button_13D4FC1E_310A_0017_41BA_DDA6D071C1BA_mobile.label = Lorem Ipsum
 Button_020BBBDA_119F_6973_41AA_D38776804912_mobile.pressedLabel = Lorem Ipsum
 Button_020BBBDA_119F_6973_41AA_D38776804912_mobile.label = Lorem Ipsum
-Button_17593215_31FA_0014_41C0_42BAFB0080F0_mobile.label = Lorem Ipsum
-Button_17EB02B7_3106_0014_41AF_05D9AC36B189_mobile.label = Lorem Ipsum
-Button_17EAD2B7_3106_0014_41C0_0B5453B4841D_mobile.label = Lorem Ipsum
-Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0_mobile.pressedLabel = Lorem Ipsum
-Button_17565D7D_31FA_0015_4193_78BBCB2DC70F_mobile.label = Lorem Ipsum
 Button_1756FD7D_31FA_0015_41C7_DA2AAC2AAAEC_mobile.label = Lorem Ipsum
+Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0_mobile.pressedLabel = Lorem Ipsum
+Button_15A12DDC_31FA_0014_416B_ED845741AE5F_mobile.pressedLabel = Lorem Ipsum
+Button_17EAE2B7_3106_0014_41C7_DB7FC43AAEE0_mobile.label = Lorem Ipsum
+Button_17565D7D_31FA_0015_4193_78BBCB2DC70F_mobile.label = Lorem Ipsum
 Button_17564D7D_31FA_0015_41B8_A9191CD56C52_mobile.label = Lorem Ipsum
-Button_1759F215_31FA_0014_41BD_BBFA5FB0D882_mobile.pressedLabel = Lorem Ipsum
-Button_1759F215_31FA_0014_41BD_BBFA5FB0D882_mobile.label = Lorem Ipsum
-Button_159EBDDD_31FA_0014_41C8_935504B30727_mobile.label = Lorem Ipsum
 Button_17598215_31FA_0014_41AC_1166AB319171_mobile.label = Lorem Ipsum
+Button_159E9DDC_31FA_0015_41B6_CB1D433C7673_mobile.label = Lorem Ipsum
+Button_17564D7D_31FA_0015_41B8_A9191CD56C52_mobile.pressedLabel = Lorem Ipsum
+Button_159EBDDD_31FA_0014_41C8_935504B30727_mobile.label = Lorem Ipsum
+Button_17EB92B7_3106_0014_41B2_34A3E3F63779_mobile.label = Lorem Ipsum
 Button_17566D7D_31FA_0015_41AD_98D7C60C694F_mobile.label = Lorem Ipsum
 Button_17567D7D_31FA_0015_41C2_1E0D0AF05C7A_mobile.label = Lorem Ipsum
 Button_1756DD7D_31FA_0015_41A5_988B67FCF8B7_mobile.label = Lorem Ipsum
-Button_17564D7D_31FA_0015_41B8_A9191CD56C52_mobile.pressedLabel = Lorem Ipsum
-Button_17562D7D_31FA_0015_41A3_96B282B30DBA_mobile.label = Lorem Ipsum
 Button_17560D7D_31FA_0015_41C4_7F0EC7540CC2_mobile.label = Lorem Ipsum
-Button_17EB42B7_3106_0014_41B0_CE70CBDDF438_mobile.label = Lorem ipsum
-Button_17561D7D_31FA_0015_41B5_BD72FAC26B8B_mobile.label = Lorem ipsum
-Button_168DE310_3106_01EC_4192_6A9F468A0ADE_mobile.label = Lorem ipsum
+Button_17562D7D_31FA_0015_41A3_96B282B30DBA_mobile.label = Lorem Ipsum
 Button_168DE310_3106_01EC_4192_6A9F468A0ADE.label = Lorem ipsum
+Button_17561D7D_31FA_0015_41B5_BD72FAC26B8B_mobile.label = Lorem ipsum
+Button_17EB42B7_3106_0014_41B0_CE70CBDDF438_mobile.label = Lorem ipsum
+Button_168DE310_3106_01EC_4192_6A9F468A0ADE_mobile.label = Lorem ipsum
 Button_17EB42B7_3106_0014_41B0_CE70CBDDF438.label = Lorem ipsum
 Button_17592215_31FA_0014_41B2_AA3B5CC318B8.label = Lorem ipsum
 Button_17561D7D_31FA_0015_41B5_BD72FAC26B8B.label = Lorem ipsum
 Button_17592215_31FA_0014_41B2_AA3B5CC318B8_mobile.label = Lorem ipsum
 Button_2A2C053B_310E_001C_41A2_583DE489828C.label = Meeting Area 1
 Button_2A2C053B_310E_001C_41A2_583DE489828C_mobile.label = Meeting Area 1
-Button_2A2C753B_310E_001C_41C4_B649CCC20E3D.label = Meeting Area 2
 Button_2A2C753B_310E_001C_41C4_B649CCC20E3D_mobile.label = Meeting Area 2
-Button_159ECDDC_31FA_0014_41B9_2D5AB1021813_mobile.label = PERDONATTI BARBEARIA
+Button_2A2C753B_310E_001C_41C4_B649CCC20E3D.label = Meeting Area 2
 Button_159ECDDC_31FA_0014_41B9_2D5AB1021813.label = PERDONATTI BARBEARIA
-Button_0A054365_2D09_CB9F_4145_8C365B373D19_mobile.label = PORTFÓLIO 360º >
+Button_159ECDDC_31FA_0014_41B9_2D5AB1021813_mobile.label = PERDONATTI BARBEARIA
 Button_0A054365_2D09_CB9F_4145_8C365B373D19.label = PORTFÓLIO 360º >
+Button_0A054365_2D09_CB9F_4145_8C365B373D19_mobile.label = PORTFÓLIO 360º >
 Button_1D2C4FDF_2D7F_BAAB_4198_FBD1E9E469FF_mobile.label = PROJETOS >
 Button_1D2C4FDF_2D7F_BAAB_4198_FBD1E9E469FF.label = PROJETOS >
 Button_1759A215_31FA_0014_41C7_F6B1044E5BB3_mobile.label = Projeto 1
@@ -199,8 +198,9 @@ Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E.pressedLabel = Reception
 Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E.label = Reception
 Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E_mobile.pressedLabel = Reception
 Button_2A2C253B_310E_001C_41B6_D3A7F4F68C3E_mobile.label = Reception
-Button_159EEDDC_31FA_0014_41B6_22A86B2D2FEB_mobile.label = SEU TOUR VIRTUAL 360º...
+Button_062AF830_1140_E215_418D_D2FC11B12C47_mobile.label = SAIBA MAIS
 Button_159EEDDC_31FA_0014_41B6_22A86B2D2FEB.label = SEU TOUR VIRTUAL 360º...
+Button_159EEDDC_31FA_0014_41B6_22A86B2D2FEB_mobile.label = SEU TOUR VIRTUAL 360º...
 Button_15F5A318_3106_001C_41C5_9AA2EF2184CF_mobile.label = Terrace
 Button_15F5A318_3106_001C_41C5_9AA2EF2184CF.label = Terrace
 Button_1757CD7D_31FA_0015_4143_A9E37B16A50B.label = VOLTAR
